--- a/Bamilen数据库模拟/Bamilen数据库模拟.vcxproj
+++ b/Bamilen数据库模拟/Bamilen数据库模拟.vcxproj
@@ -131,6 +131,16 @@
   <ItemGroup>
     <ClCompile Include="BamilenDataLib.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="resource.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Bamilen数据库模拟.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="F:\MyProject\OC Project\Bamilen\Logo\Bamilen-Logo.png" />
+    <Image Include="F:\MyProject\OC Project\Bamilen\Logo\Bamilen.ico" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
